--- a/3dgame.html
+++ b/3dgame.html
@@ -27,7 +27,20 @@
 
 
 
-				scene.clearColor = new BABYLON.Color3(0, 0, 0.1);
+				scene.clearColor = new BABYLON.Color3(0.1, 0, 0);
+
+					//===Track Code===//
+
+				var _xFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.025)+(3*t*Math.pow((1-t),2)*0.1)+(3*Math.pow(t,2)*(1-t)*0.1625)+(Math.pow(t,3)*0.735)},function(t) {return (Math.pow((1-t),3)*0.735)+(3*t*Math.pow((1-t),2)*1.3075)+(3*Math.pow(t,2)*(1-t)*0.27)+(Math.pow(t,3)*0.6725)},function(t) {return (Math.pow((1-t),3)*0.6725)+(3*t*Math.pow((1-t),2)*1.075)+(3*Math.pow(t,2)*(1-t)*0.6425)+(Math.pow(t,3)*0.8475)},function(t) {return (Math.pow((1-t),3)*0.8475)+(3*t*Math.pow((1-t),2)*1.0525)+(3*Math.pow(t,2)*(1-t)*0.905)+(Math.pow(t,3)*0.9025)},function(t) {return (Math.pow((1-t),3)*0.9025)+(3*t*Math.pow((1-t),2)*0.9)+(3*Math.pow(t,2)*(1-t)*0.995)+(Math.pow(t,3)*0.9325)},function(t) {return (Math.pow((1-t),3)*0.9325)+(3*t*Math.pow((1-t),2)*0.87)+(3*Math.pow(t,2)*(1-t)*0.445)+(Math.pow(t,3)*0.355)},function(t) {return (Math.pow((1-t),3)*0.355)+(3*t*Math.pow((1-t),2)*0.265)+(3*Math.pow(t,2)*(1-t)*0.955)+(Math.pow(t,3)*0.675)},function(t) {return (Math.pow((1-t),3)*0.675)+(3*t*Math.pow((1-t),2)*0.395)+(3*Math.pow(t,2)*(1-t)*0.475)+(Math.pow(t,3)*0.4275)},function(t) {return (Math.pow((1-t),3)*0.4275)+(3*t*Math.pow((1-t),2)*0.38)+(3*Math.pow(t,2)*(1-t)*0.1725)+(Math.pow(t,3)*0.13)},function(t) {return (Math.pow((1-t),3)*0.13)+(3*t*Math.pow((1-t),2)*0.0875)+(3*Math.pow(t,2)*(1-t)*0.7325)+(Math.pow(t,3)*0.7325)},function(t) {return (Math.pow((1-t),3)*0.7325)+(3*t*Math.pow((1-t),2)*0.7325)+(3*Math.pow(t,2)*(1-t)*0.465)+(Math.pow(t,3)*0.4625)},function(t) {return (Math.pow((1-t),3)*0.4625)+(3*t*Math.pow((1-t),2)*0.46)+(3*Math.pow(t,2)*(1-t)*0.195)+(Math.pow(t,3)*0.2025)},function(t) {return (Math.pow((1-t),3)*0.2025)+(3*t*Math.pow((1-t),2)*0.21)+(3*Math.pow(t,2)*(1-t)*0.4075)+(Math.pow(t,3)*0.4675)},function(t) {return (Math.pow((1-t),3)*0.4675)+(3*t*Math.pow((1-t),2)*0.5275)+(3*Math.pow(t,2)*(1-t)*0.66)+(Math.pow(t,3)*0.73)},function(t) {return (Math.pow((1-t),3)*0.73)+(3*t*Math.pow((1-t),2)*0.8)+(3*Math.pow(t,2)*(1-t)*0.4475)+(Math.pow(t,3)*0.4525)},function(t) {return (Math.pow((1-t),3)*0.4525)+(3*t*Math.pow((1-t),2)*0.4575)+(3*Math.pow(t,2)*(1-t)*0.3375)+(Math.pow(t,3)*0.3375)},function(t) {return (Math.pow((1-t),3)*0.3375)+(3*t*Math.pow((1-t),2)*0.3375)+(3*Math.pow(t,2)*(1-t)*0.04)+(Math.pow(t,3)*0.4525)},function(t) {return (Math.pow((1-t),3)*0.4525)+(3*t*Math.pow((1-t),2)*0.865)+(3*Math.pow(t,2)*(1-t)*0.66)+(Math.pow(t,3)*0.6625)}];var i = Math.max(0,Math.min(17, Math.floor(t * 18)));return fns[i]((t - (i/18)) * 18);};
+				var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(3*t*Math.pow((1-t),2)*0.025)+(3*Math.pow(t,2)*(1-t)*0.025)+(Math.pow(t,3)*0.0828125)},function(t) {return (Math.pow((1-t),3)*0.0828125)+(3*t*Math.pow((1-t),2)*0.140625)+(3*Math.pow(t,2)*(1-t)*0.1453125)+(Math.pow(t,3)*0.0228125)},function(t) {return (Math.pow((1-t),3)*0.0228125)+(3*t*Math.pow((1-t),2)*-0.0996875)+(3*Math.pow(t,2)*(1-t)*0.3303125)+(Math.pow(t,3)*0.2778125)},function(t) {return (Math.pow((1-t),3)*0.2778125)+(3*t*Math.pow((1-t),2)*0.2253125)+(3*Math.pow(t,2)*(1-t)*0.1128125)+(Math.pow(t,3)*0.1128125)},function(t) {return (Math.pow((1-t),3)*0.1128125)+(3*t*Math.pow((1-t),2)*0.1128125)+(3*Math.pow(t,2)*(1-t)*0.1703125)+(Math.pow(t,3)*0.2378125)},function(t) {return (Math.pow((1-t),3)*0.2378125)+(3*t*Math.pow((1-t),2)*0.3053125)+(3*Math.pow(t,2)*(1-t)*0.5078125)+(Math.pow(t,3)*0.3153125)},function(t) {return (Math.pow((1-t),3)*0.3153125)+(3*t*Math.pow((1-t),2)*0.1228125)+(3*Math.pow(t,2)*(1-t)*0.3053125)+(Math.pow(t,3)*0.3728125)},function(t) {return (Math.pow((1-t),3)*0.3728125)+(3*t*Math.pow((1-t),2)*0.4403125)+(3*Math.pow(t,2)*(1-t)*0.3678125)+(Math.pow(t,3)*0.3778125)},function(t) {return (Math.pow((1-t),3)*0.3778125)+(3*t*Math.pow((1-t),2)*0.3878125)+(3*Math.pow(t,2)*(1-t)*0.5178125)+(Math.pow(t,3)*0.6278125)},function(t) {return (Math.pow((1-t),3)*0.6278125)+(3*t*Math.pow((1-t),2)*0.7378125)+(3*Math.pow(t,2)*(1-t)*0.6403125)+(Math.pow(t,3)*0.6553125)},function(t) {return (Math.pow((1-t),3)*0.6553125)+(3*t*Math.pow((1-t),2)*0.6703125)+(3*Math.pow(t,2)*(1-t)*0.5103125)+(Math.pow(t,3)*0.5178125)},function(t) {return (Math.pow((1-t),3)*0.5178125)+(3*t*Math.pow((1-t),2)*0.5253125)+(3*Math.pow(t,2)*(1-t)*0.5203125)+(Math.pow(t,3)*0.5253125)},function(t) {return (Math.pow((1-t),3)*0.5253125)+(3*t*Math.pow((1-t),2)*0.5303125)+(3*Math.pow(t,2)*(1-t)*0.5128125)+(Math.pow(t,3)*0.5178125)},function(t) {return (Math.pow((1-t),3)*0.5178125)+(3*t*Math.pow((1-t),2)*0.5228125)+(3*Math.pow(t,2)*(1-t)*0.6353125)+(Math.pow(t,3)*0.6503125)},function(t) {return (Math.pow((1-t),3)*0.6503125)+(3*t*Math.pow((1-t),2)*0.6653125)+(3*Math.pow(t,2)*(1-t)*0.8378125)+(Math.pow(t,3)*0.8728125)},function(t) {return (Math.pow((1-t),3)*0.8728125)+(3*t*Math.pow((1-t),2)*0.9078125)+(3*Math.pow(t,2)*(1-t)*0.6803125)+(Math.pow(t,3)*0.6803125)},function(t) {return (Math.pow((1-t),3)*0.6803125)+(3*t*Math.pow((1-t),2)*0.6803125)+(3*Math.pow(t,2)*(1-t)*0.7778125)+(Math.pow(t,3)*0.8728125)},function(t) {return (Math.pow((1-t),3)*0.8728125)+(3*t*Math.pow((1-t),2)*0.9678125)+(3*Math.pow(t,2)*(1-t)*0.8553125)+(Math.pow(t,3)*0.8528125)}];var i = Math.max(0,Math.min(17, Math.floor(t * 18)));return fns[i]((t - (i/18)) * 18);};
+				/* START CURVE DATA 
+				{"start":[10,80],"init":[40,10],"segments":[{"a":[65,10],"b":[294,33.125]},{"a":[108,58.125],"b":[269,9.125]},{"a":[257,132.125],"b":[339,111.125]},{"a":[362,45.125],"b":[361,45.125]},{"a":[398,68.125],"b":[373,95.125]},{"a":[178,203.125],"b":[142,126.125]},{"a":[382,122.125],"b":[270,149.125]},{"a":[190,147.125],"b":[171,151.125]},{"a":[69,207.125],"b":[52,251.125]},{"a":[293,256.125],"b":[293,262.125]},{"a":[186,204.125],"b":[185,207.125]},{"a":[78,208.125],"b":[81,210.125]},{"a":[163,205.125],"b":[187,207.125]},{"a":[264,254.125],"b":[292,260.125]},{"a":[179,335.125],"b":[181,349.125]},{"a":[135,272.125],"b":[135,272.125]},{"a":[16,311.125],"b":[181,349.125]},{"a":[264,342.125],"b":[265,341.125]}]}
+				   END CURVE DATA */
+												
+					//===End Track Code
+
+				var xFn= function(t) { return 650 * _xFn(t); }
+				var zFn= function(t) { return 650 * _yFn(t); }
 
 				var playerSphere = BABYLON.MeshBuilder.CreateSphere("playerSphere", {
 					segments: 12,
@@ -37,13 +50,51 @@
 				BABYLON.StandardMaterial("playerSphereMaterial", scene);
 				playerSphere.material.diffuseTexture = new 
 				BABYLON.Texture('resources/BeachBallColor.jpg', scene);
-				playerSphere.position = new BABYLON.Vector3(100, 100, 100);
+				playerSphere.position = new BABYLON.Vector3(xFn(0), 9, zFn(0));
 
 				playerSphere.physicsImpostor = new BABYLON.PhysicsImpostor(playerSphere,
 				BABYLON.PhysicsImpostor.SphereImpostor, {
 					mass: 1,
-					restitution: 0.9
-				}, scene); 
+					restitution: 0.10
+				}, scene);
+
+				BABYLON.SceneLoader.ImportMesh(null, "resources/", "speed.obj", scene, 
+				function(meshes) {
+					var boostMesh = meshes[0], boosts = [];
+					boostMesh.material = new BABYLON.StandardMaterial("boostMaterial", 
+				scene);
+					boostMesh.material.diffuseColor = new BABYLON.Color3(3, 0, 0);
+					boostMesh.scaling = new BABYLON.Vector3(5, 5, 5);
+					boostMesh.setEnabled(false);
+					function boostAt(xFn, zFn, t) {
+						var newBoost = boostMesh.clone('boost');
+						newBoost.position = new BABYLON.Vector3(xFn(t), 3.2, zFn(t));
+						newBoost.rotation.y = -derivAngle(t, xFn, zFn);
+						newBoost.setEnabled(true);
+						boosts.push(newBoost);
+					}
+
+					// Place boosts here
+					boostAt(xFn, zFn, 0.05);
+
+					var startTime;
+					var timer = document.querySelector('#timer');
+
+					scene.registerAfterRender(function() {
+						boosts.forEach(function(boost, i){
+							if(boost.intersectsMesh(playerSphere)){
+							boost.dispose();
+							boosts.splice(i,1);
+							var vel = playerSphere.physicsImpostor.getLinearVelocity();
+							playerSphere.applyImpulse(vel.normalize().scale(100), playerSphere.
+				getAbsolutePosition());
+						} else {
+							boost.rotation.y += 0.01
+							}
+						});
+					});
+				}); 
+ 
 
 				var camera = new BABYLON.ArcRotateCamera("Camera", 0, (3 * Math.PI) / 8,
 			20, playerSphere, scene);
@@ -52,7 +103,20 @@
 				var light = new BABYLON.HemisphericLight('light1', new BABYLON.Vector3*(0, 5, 0), scene);
 				scene.registerAfterRender(function() { 
 				var vel = playerSphere.physicsImpostor.getLinearVelocity();
-				playerSphere.physicsImpostor.setLinearVelocity(vel.scale(.98)); 
+				playerSphere.physicsImpostor.setLinearVelocity(vel.scale(.98));
+
+				rampAt(xFn, zFn, 0.42, -Math.PI / 4, scene); 
+				rampAt(xFn, zFn, 0.48, -Math.PI / 4, scene); 
+				rampAt(xFn, zFn, 0.05, -Math.PI / 4, scene);
+				rampAt(xFn, zFn, 0.08, Math.PI / 4, scene);
+				rampAt(xFn, zFn, 0.51, -Math.PI / 4, scene);
+				rampAt(xFn, zFn, 0.86, Math.PI / 4, scene);
+				rampAt(xFn, zFn, 0.82, -Math.PI / 4, scene);
+				rampAt(xFn, zFn, 0.95, -Math.PI / 4, scene);
+
+
+
+
 
 				var forward = camera.getFrontPosition(1).subtract(camera.position);
 				forward.y = 0;
@@ -65,46 +129,115 @@
 				var right = BABYLON.Vector3.TransformCoordinates(forward, BABYLON.Matrix.RotationY(Math.PI / 2));
 
 				if (keys.w) {
-				playerSphere.applyImpulse(forward, playerSphere.getAbsolutePosition());
+					if(!startTime){ startTime = Date.now(); }
+
+					playerSphere.applyImpulse(forward, playerSphere.getAbsolutePosition());
 				}
 				if (keys.s) {
-				playerSphere.applyImpulse(backward, playerSphere.getAbsolutePosition());
+					playerSphere.applyImpulse(backward, playerSphere.getAbsolutePosition());
 				}
 				if (keys.a) {
-				playerSphere.applyImpulse(left, playerSphere.getAbsolutePosition());
+					playerSphere.applyImpulse(left, playerSphere.getAbsolutePosition());
 				}
 				if (keys.d) {
-				playerSphere.applyImpulse(right, playerSphere.getAbsolutePosition());
+					playerSphere.applyImpulse(right, playerSphere.getAbsolutePosition());
+				} 
+
+				var currentT = tLookup(xFn, zFn, 500, playerSphere.position.x,
+			 playerSphere.position.z); 
+
+				
+
+
+				if (currentT > 0.99) {
+					win();
 				} 
 
 				if (playerSphere.position.y < -10) {
 					lost();
 				  }
-				});	
+				  if(startTime) {
+					timer.innerHTML = ((Date.now() - startTime) / 
+				1000).toFixed(2).replace('.',':');
+				} 
+			});	
 
 				function drawPoint(x, z, zrot, scene) {
 					var point = BABYLON.MeshBuilder.CreateBox('point', { 
-						width: 40, 
+						width: 30, 
 						height: 0.8, 
 						depth: 13 
 					}, scene);
-					point.material = new BABYLON.StandardMaterial("pointMaterial", scene);
-					point.material.diffuseColor = new BABYLON.Color3(0, 1, 2);
-					point.position = new BABYLON.Vector3(100, 95, 100);
+					point.material = new BABYLON.StandardMaterial("curveEditor", scene);
+					point.material.diffuseColor = new BABYLON.Color3(2, 0, 0);
+					point.position = new BABYLON.Vector3(x, 0.1, z);
 					point.rotation.y = zrot;
-					point.physicsImpostor = new BABYLON.PhysicsImpostor(point, BABYLON.PhysicsImpostor.BoxImpostor, {
+					point.physicsImpostor = new BABYLON.PhysicsImpostor(point, 
+						BABYLON.PhysicsImpostor.BoxImpostor, {
 						mass: 0, //Braden changed this from 1 to 0...not sure if it will work forever. haha! 
-						restitution: 0.10
+						restitution: 0.9
 					}, scene);
 				}
 
-				drawPoint(0, 0, 0, scene); 
+				function drawParametric(xFn, zFn, start, end, res, scene) {
+					for (var t = start; t <= end; t += ((end - start) / res)) {
+						drawPoint(xFn(t), zFn(t), 0, scene);
+					}
+				}
+
+				drawParametric(xFn, zFn, 0, 1, 470, scene);
+
+				function tLookup(xFn, zFn, res, x, z) {
+					var minT = 0;
+					var minDist = Infinity;
+					for (var t = 0; t <= 1; t += (1 / res)) {
+						var dist = Math.pow(x - xFn(t), 2) + Math.pow(z - zFn(t), 2);
+						if (dist < minDist) {
+							minDist = dist;
+							minT = t;
+							}
+						}
+						return minT;
+					} 
+
+					function derivAngle(t, xFn, zFn) {
+						function derive(f, x) {
+							var h = 2.2e-10;
+							return (f(x + h) - f(x - h)) / (2 * h);
+						}
+						return Math.atan2(derive(zFn, t), derive(xFn, t));
+					} 
+
+					function rampAt(xFn, zFn, t, angle, scene) {
+						var ramp = BABYLON.MeshBuilder.CreateBox('ramp', {
+							height: 8,
+							width: .3,
+							depth: 15
+						}, scene);
+						ramp.material = new BABYLON.StandardMaterial("rampMaterial", scene);
+						ramp.material.diffuseColor = new BABYLON.Color3(0, 0, 0);
+						ramp.physicsImpostor = new 
+					BABYLON.PhysicsImpostor(ramp, BABYLON.PhysicsImpostor.BoxImpostor, {
+							mass: 0,
+							restitution: 0.9
+						}, scene);
+						ramp.position = new BABYLON.Vector3(xFn(t), 3.2, zFn(t));
+
+						ramp.rotation.z = angle;
+						ramp.rotation.y = -derivAngle(t, xFn, zFn);
+					} 
+
 
 
 				engine.runRenderLoop(scene.render.bind(scene));
 				window.addEventListener('resize', engine.resize.bind(engine));
 
 			}
+
+			function win(){
+				window.location.reload();
+				alert("You WIN!");
+			} 
 
 			function lost(){
 				window.location.reload();
@@ -125,9 +258,21 @@
 			height: 100%;
 			touch-action: none;
 		}
+
+		#timer {
+			position: absolute;
+			left:10px;
+			bottom:10px;
+			color:#ccc;
+			font: 52px sans-serif;
+		} 
+
 		</style>
 	</head> 
 	<body onload="start()"> 
-		<canvas id="renderCanvas"></canvas> 
+		<canvas id="renderCanvas"></canvas>
+
+		<div id="timer">00:00</div> 
+ 
 	</body>
 </html> 
